horizontal scroll fixed

--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,8 @@ textarea {
   padding: 6px;
 }
 
+
+
 body {
   background-color: var(--color-bg);
   _display: flex;
@@ -21,6 +23,8 @@ body {
   _max-width: 800px;
   margin-left: auto;
   margin-right: auto;
+
+
 }
 main {
   padding: 20px;
@@ -30,12 +34,17 @@ main {
   grid-template-columns: 1fr;
   justify-items: center;
   gap: 20px;
+  
+
+ 
+
+ 
 }
 .create__section {
   display: grid;
   grid-template-columns: 1fr;
   justify-items: center;
-  gap: 20px;
+  gap: var(--min-space-around-cards);
 }
 
 .header {
@@ -76,48 +85,24 @@ main {
   height: auto;
 }
 
-.card__grid {
-  display: grid;
-  border-top: 1px solid black;
-  grid-template-columns: 1fr;
-  grid-template-rows: 0.5fr 3fr 0.6fr 0.6fr;
-  gap: 10px;
-  background-color: #ff4a11;
-  grid-auto-rows: minmax(200px, 200px);
-  justify-content: flex-start;
-}
-.grid-items:nth-child(1) {
-  align-self: flex-start;
-}
-
-.grid-items:nth-child(2) {
-}
-.grid-items:nth-child(3) {
-  justify-self: center;
-  align-self: center;
-}
-.grid-items:nth-child(4) {
-  justify-self: center;
-  align-self:flex-end;
-}
-
 .card {
   border: 0px solid black;
   box-shadow: 0px 0px 0px 0 black;
   background-color: var(--color-bg-card);
-  _margin-top: 20px;
-  _margin-bottom: 20px;
-  padding: 5px;
-  padding-left: 20px;
-  padding-right: 20px;
+
+  padding-top: 5px;
+  padding-left: var(--min-space-around-cards);
+  padding-right: var(--min-space-around-cards);
   padding-bottom: 20px;
   scroll-margin-top: 100px;
   border-radius: var(--card-border-radius);
   position: relative;
-  width: 100%;
+  width: var(--card-width)
 
   /* give the card a position property to be an anchor for other elements, that need to be positioned inside the card. */
 }
+
+
 
 .card__heading {
   font-family: Roboto, sans-serif;
@@ -125,6 +110,7 @@ main {
 }
 .card__text {
   font-size: 16px;
+  min-height: 100px;
 }
 
 .card__bookmark {
@@ -145,27 +131,47 @@ main {
   display: block;
   width: 100px;
   height: 30px;
-  _margin: 0px auto;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  margin-left: auto;
+  margin-right: auto;
 }
 .holder {
   display: flex;
   direction: row;
-  justify-content: space-evenly;
-  _margin-top: 10px;
+  justify-content: space-between;
+  gap: 5px;
+  -position: absolute;
+  bottom: 20px;
+  /*TODO*/
+  -left: 50%;
+  -transform: translate(-50%);
 }
 .btn__a {
   font-family: Roboto, sans-serif;
+  padding: 5px;
 }
+/*calc(var(--card-width) * 2 + var(--min-space-around-cards) *3 )*/
+/*calc((var(--card-width)) * 2)*/
 
-@media (min-width: 550px) {
+@media (min-width: 660px) {
   .main__section {
     display: grid;
     grid-template-columns: 1fr 1fr;
     justify-items: center;
+   
   }
 }
 
-@media (min-width: 1100px) {
+@media (min-width: 990px) {
+  .main__section {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    justify-items: center;
+  }
+}
+
+@media (min-width: 1320px) {
   .main__section {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
